Aula 3.3 - Migração de Dados com o Flyway

--- a/algamoney-api/pom.xml
+++ b/algamoney-api/pom.xml
@@ -45,10 +45,17 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--mysql-->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!--Migracoes - Flyway-->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
 		</dependency>
 	</dependencies>
 
