--- a/algamoney-api/src/main/resources/ValidationMessages.properties
+++ b/algamoney-api/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,2 @@
-javax.validation.constraints.NotNull.message={0} é obrigatório(a)
+javax.validation.constraints.NotNull.message={0} \u00E9 obrigat\u00F3rio(a)
 javax.validation.constraints.Size.message={0} deve ter o tamanho entre {min} e {max}
