Aula 7.4 - Deploy da API na nuvem

--- a/algamoney-api/pom.xml
+++ b/algamoney-api/pom.xml
@@ -67,7 +67,7 @@
 		<!--Suporte do Jackson para as datas do Java 8-->
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatyoe-jsr310</artifactId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
 
 		<dependency>
